--- a/css/main.css
+++ b/css/main.css
@@ -14,15 +14,16 @@ body {
     font-family: 'Oswald', sans-serif;
 }
 
-.phone-heading h1 {
+
+.phone-info h1 {
     margin-bottom: 30px;
 }
 
-.phone-heading span {
+.phone-info span {
     font-weight: bold;
 }
 
-.phone-heading p {
+.phone-info p {
     margin-top: 30px;
 }
 
@@ -33,4 +34,22 @@ body {
 .image img {
     height: 600px;
     border-radius: 10px;
+}
+
+.deadline {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.deadline article {
+    border: 1px solid #000;
+    padding: 5px 20px;
+    text-transform: uppercase;
+    background-color: #123;
+    color: #eee;
+    border-radius: 5px;
+    box-shadow: 4px 4px 4px #123;
 }
